tests/error/use_error_variable.bz
function foo()
{
	const x = do_something();
	x & 1u32;
}

static_assert((foo(), true));
